Provide file configuration with access token response

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 OAUTH_CLIENT_ID=passw0rd
 OAUTH_CLIENT_SECRET=passw0rd
 AUTH_HOST=github.com
+OWNER=owner
+REPO=repo
+BRANCH=master
+JSON_FILE=config.json
+SCHEMA_FILE=schema.json
+
